Migrate production code to Kotlin